--- a/Dockerfile.slim-pg
+++ b/Dockerfile.slim-pg
@@ -13,6 +13,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
                 telnet \
                 bzip2 \
                 gcc \
+                htop \
                 g++ \
                 zip \
                 bash \
